kubernetes/redis/client-other.yml
apiVersion: v1
kind: Pod
metadata:
  name: bm2c-redis-client
  namespace: keycloak
spec:
  containers:
  - name: redis-client
    image: redis:7.4.0
    command: ["sleep", "3600"]
# kubectl exec -it bm2c-redis-client -n keycloak -- redis-cli -h bm2c-redis-svc.bm2c-db-nmp.svc.cluster.local
