kubernetes/redis/client.yml
apiVersion: v1
kind: Pod
metadata:
  name: bm2c-redis-client
  namespace: bm2c-db-nmp
spec:
  containers:
  - name: redis-client
    image: redis:7.4.0
    command: ["sleep", "3600"]
# kubectl exec -it bm2c-redis-client -n bm2c-db-nmp-- redis-cli -h bm2c-redis-svc
